# titanic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: titanic.ipynb
results/: gb_preds.csv  lr_preds.csv  rf_preds.csv  svc_preds.csv  vote_preds.csv
src/titanic/: constants.py  titanic.ipynb
